[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tower.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.8285, 16.0917 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Tower" type="Area2D"]
script = ExtResource( 1 )

[node name="Base" type="ColorRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="ColorRect" parent="."]
margin_left = 10.725
margin_top = 14.7
margin_right = 30.725
margin_bottom = 19.7
color = Color( 0.921569, 0.996078, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotPosition" type="Node2D" parent="Gun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16.1101, 16.5269 )
shape = SubResource( 1 )

[node name="Aggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
position = Vector2( 15.666, 14.697 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="area_entered" from="." to="." method="_on_Tower_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Tower_area_exited"]
[connection signal="area_entered" from="Aggro" to="." method="_on_Aggro_area_entered"]
[connection signal="area_exited" from="Aggro" to="." method="_on_Aggro_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
